Задание по HTML

--- a/src/index.html
+++ b/src/index.html
@@ -3,5 +3,13 @@
     <head>
         <title>HTML</title>
     </head>
-    <body></body>
+    <body>
+        <h1>Header fist level</h1>
+        <h2>Header second level</h2>
+        <ol>
+            <li><a href="http://google.ru/">Some link 1</a></li>
+            <li><a href="http://yandex.ru/">Some link 2</a></li>
+            <li><a href="https://youtu.be/BfrVRJaglPE">Some link 3</a></li>
+        </ol>
+    </body>
 </html>
